--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,10 @@
 /*  your css code here. If applicable */
+*{
+	background-image: url(https://www.globalfocusmagazine.com/wp-content/uploads/2020/02/Engaging_with_technology-scaled.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+h1{
+	color: white;
+	font-size: 10px;
+}
